actualizacion rama MO